charts/raw_config/frontend/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: simi-service
  labels:
    app: simi
    version: 0.1.0
spec:
  # type: NodePort # type NodePort for easier for development 
  selector:
    app: simi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      # access via localhost:31234
      # nodePort range 30000 ~ 32767
      # nodePort: 31234
