charts/raw_config/frontend/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simi
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # ingressClassName: nginx
  rules:
  - host: simi.reart.live
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simi-service
            port:
              number: 80
  - host: simi.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simi-service
            port:
              number: 80
